# python-fastapi-basics

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  dependencies.py  main.py  schemas.py
app/routers/: items.py
tests/: test_main.py
