[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-fastapi-basics"
version = "0.1.0"
description = "A simple FastAPI project that demonstrates routes, middleware, validation, dependencies, docs, and tests."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "httpx2>=2.0.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
